<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:startDestination="@id/home_graph">

    <include app:graph="@navigation/home_graph" />
    <include app:graph="@navigation/selections_graph" />
    <include app:graph="@navigation/favorites_graph" />

</navigation>