<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/selections_fragment_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ivi_blue_dark"
        android:visibility="invisible"
        tools:context=".presentation.fragments.selections.SelectionsFragment"
        tools:visibility="visible">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/selections_topBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/selections_catalog_film"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/menu_top_bar_selections"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/search_top_bar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:theme="@style/CustomSearchView"
                    app:iconifiedByDefault="false"
                    app:queryHint="@string/search_view_hint" />
            </com.google.android.material.appbar.MaterialToolbar>


        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/selections_catalog_film"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selections_topBar"
            tools:listitem="@layout/item_film" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>