<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import
            alias="Film"
            type="com.w4ereT1ckRtB1tch.moviefan.domain.model.Film" />

        <import
            alias="ViewModel"
            type="com.w4ereT1ckRtB1tch.moviefan.presentation.fragments.details.FilmDetailsViewModel" />

        <variable
            name="viewModel"
            type="ViewModel" />

        <variable
            name="film"
            type="Film" />

        <variable
            name="isVisible"
            type="Boolean" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/film_details_fragment_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".presentation.fragments.details.FilmDetailsFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/details_film_app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/details_title_film"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="60dp"
                app:collapsedTitleTextAppearance="@style/CustomCollapsedAppBar"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleTextAppearance="@style/CustomExpandedAppBar"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:title="@{film.title}"
                tools:title="@tools:sample/lorem">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/details_poster_film"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="center"
                    app:layout_collapseMode="parallax"
                    app:srcGlide="@{film.backdrop}"
                    tools:src="@tools:sample/avatars" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="parallax" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/downloads_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="180dp"
            android:onClick="@{()->viewModel.onClickedDownloads()}"
            android:visibility="invisible"
            app:backgroundTint="@color/ivi_red"
            app:fabSize="mini"
            app:layout_anchor="@id/include"
            app:layout_anchorGravity="bottom|end"
            app:rippleColor="@color/ivi_blue"
            app:srcCompat="@drawable/ic_round_save_alt_24"
            app:tint="@color/white"
            app:visibleState="@{isVisible}" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/share_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="130dp"
            android:onClick="@{() -> viewModel.onClickedShare()}"
            android:visibility="invisible"
            app:backgroundTint="@color/ivi_red"
            app:fabSize="mini"
            app:layout_anchor="@id/include"
            app:layout_anchorGravity="bottom|end"
            app:rippleColor="@color/ivi_blue"
            app:srcCompat="@drawable/ic_round_share_24"
            app:tint="@color/white"
            app:visibleState="@{isVisible}" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/favorites_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="80dp"
            android:onClick="@{() -> viewModel.onClickedFavorites()}"
            android:visibility="invisible"
            app:backgroundTint="@color/ivi_red"
            app:fabSize="mini"
            app:layout_anchor="@id/include"
            app:layout_anchorGravity="bottom|end"
            app:rippleColor="@color/ivi_blue"
            app:srcDrawable="@{film.favorites ? @drawable/ic_round_favorite_24 : @drawable/ic_round_favorite_border_24}"
            app:tint="@color/white"
            app:visibleState="@{isVisible}" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/details_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:onClick="@{() -> viewModel.onClickedDetails()}"
            app:backgroundTint="@color/ivi_red"
            app:layout_anchor="@id/include"
            app:layout_anchorGravity="bottom|end"
            app:rippleColor="@color/ivi_blue"
            app:srcCompat="@drawable/ic_round_add_24"
            app:tint="@color/white" />

        <include
            android:id="@+id/include"
            layout="@layout/nested_film_details"
            bind:film="@{film}" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_load"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible"
            app:hideAnimationBehavior="outward"
            app:indicatorColor="@color/ivi_red"
            app:layout_anchor="@id/include"
            app:layout_anchorGravity="top"
            app:showAnimationBehavior="outward"
            app:trackThickness="6dp" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>