...
            name="isLoadList"
            type="Boolean" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_fragment_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ivi_blue_dark"
        android:visibility="invisible"
        tools:context=".presentation.fragments.home.HomeFragment"
        tools:visibility="visible">
...

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <!-- RecyclerView layout catalog film-->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/catalog_film"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layoutAnimation="@anim/cards_spawn_layout_animation"
                    android:visibility="@{isLoadList ? View.INVISIBLE : View.VISIBLE}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_film"
...
